[stdevMac] refs #2031 Update some specifications of swagger endpoints
